[metadata]
name = joyboy
version = 0.0.1
author = ZHibaoui
author_email = HelloMe@proton.me
description = test package for documentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZakariaHibaoui/Science_Stegano
project_urls =
    Bug Tracker = https://github.com/ZakariaHibaoui/Science_Stegano/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
